services/operacao-pagamento/kubernetes/operacao-pagamento-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: operacao-pagamento
  name: operacao-pagamento
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: operacao-pagamento
  type: ClusterIP
